--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
-  wether-app: #name of the second service
-    build: . # specify the directory of the Dockerfile
+ wether-app:
+    build: .
+    command: npm start
+    volumes:
+     - ./vote:/app
     ports:
-      - "3002:3002" #specify ports forewarding
-
-  database: # name of the third service
-    image: mongo # specify image to build container from
-    ports:
-      - "27017:27017" # specify port forewarding
+      - "3002:3002"
+  
